Tomi: changed name of Share model to Post model + all relevant file names and changes in code

--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="actions">
 	
-	<%= f.fields_for :shares do |s| %>
+	<%= f.fields_for :posts do |s| %>
 		<div class="field">
 		    <%= s.label :note, 'Why do you recommend this food?' %><br />
 		    <%= s.text_area :note, :rows => 3 %>
