--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,64 +1,57 @@
 <p id="notice"><%= notice %></p>
+<%= render 'top_navigation' %>
+<div class="container">
+	<h2>
+	  <%= @food.name %>
+	</h2>
 
-<h2>
-  <%= @food.name %>
-</h2>
+	<p>
+	  <!-- <b>Picture:</b> -->
+	  <%= image_tag @food.picture, :alt => @food.name, :width => 150 %>
+	</p>
 
-<p>
-  <b>Price:</b>
-  <%= @food.price %>
-</p>
+	<p>
+	  <b>Price:</b>
+	  <%= @food.price %>
+	</p>
 
-<p>
-  <!-- <b>Picture:</b> -->
-  <%= image_tag @food.picture, :alt => @food.name, :width => 150 %>
-</p>
+	<%= link_to 'Edit', edit_food_path(@food) %> |
+	<%= link_to 'Back', foods_path %>
 
-<p>
-  <b>Category:</b>
-  <%= @food.category_id %>
-</p>
+	<br />
+	<h3>Food's yoummies</h3>
+	<div class="posts">
+		<table>
+		  <tr>
+		    <th>Note</th>
+		    <th>Rating</th>
+		    <th>Picture</th>
+		    <th>Thumbup</th>
+		    <th>Thumbdown</th>
+		    <th></th>
+		    <th></th>
+		    <th></th>
+		  </tr>
 
-<p>
-  <b>Shares:</b>
-  <%= @food.category_id %>
-</p>
+		<% @posts.each do |post| %>
+		  <tr>
+		    <td><%= post.note %></td>
+		    <td><%= post.rating %></td>
+		    <td><%= post.picture %></td>
+		    <td><%= post.thumbup %></td>
+		    <td><%= post.thumbdown %></td>
+		    <td><%= link_to 'Show', post %></td>
+		    <td><%= link_to 'Edit', edit_post_path(post) %></td>
+		    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		  </tr>
+		<% end %>
+		</table>
+		
+		<%= render 'posts/form' %>
 
-<%= link_to 'Edit', edit_food_path(@food) %> |
-<%= link_to 'Back', foods_path %>
-
-<br />
-<h3>Yoummies shares</h3>
-<div class="shares">
-	<table>
-	  <tr>
-	    <th>Note</th>
-	    <th>Rating</th>
-	    <th>Picture</th>
-	    <th>Thumbup</th>
-	    <th>Thumbdown</th>
-	    <th>Food</th>
-	    <th></th>
-	    <th></th>
-	    <th></th>
-	  </tr>
-
-	<% @food.shares.each do |share| %>
-	  <tr>
-	    <td><%= share.note %></td>
-	    <td><%= share.rating %></td>
-	    <td><%= share.picture %></td>
-	    <td><%= share.thumbup %></td>
-	    <td><%= share.thumbdown %></td>
-	    <td><%= share.food_id %></td>
-	    <td><%= link_to 'Show', share %></td>
-	    <td><%= link_to 'Edit', edit_share_path(share) %></td>
-	    <td><%= link_to 'Destroy', share, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-	  </tr>
-	<% end %>
-	</table>
-<div>
-
+		
+	<div>
+</div>
 
 
 
