--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@food) do |f| %>
+<%= form_for @food, :html => {:multipart => true} do |f| %>
   <% if @food.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@food.errors.count, "error") %> prohibited this food from being saved:</h2>
@@ -21,7 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :picture %><br />
-    <%= f.text_field :picture %>
+    <%= f.file_field :picture %>
+  </di>
+  <div class="field">
+	<%= f.label :remote_picture_url, "or image URL" %><br />
+    <%= f.text_field :remote_picture_url %>
   </div>
   <div class="field">
     <%= f.label :category_id %><br />
@@ -35,9 +39,9 @@
 		    <%= s.text_area :note, :rows => 3 %>
 		</div>
 		<!-- <div class="field">
-				    <%= s.label :rating %><br />
-				    <%= s.select :rating, { "*" => "1", "**" => "2", "***" => "3", "****" => "4", "*****" => "5"} %>
-				</div> -->
+			<%= s.label :rating %><br />
+		    <%= s.select :rating, { "*" => "1", "**" => "2", "***" => "3", "****" => "4", "*****" => "5"} %>
+		</div> -->
 	<% end %>
 	
     <%= f.submit %>
