--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing food</h1>
+<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
+<%= render 'layouts/top_navigation' %>
 
-<%= link_to 'Show', @food %> |
-<%= link_to 'Back', foods_path %>
+<div class="container">
+	<h1>Editing food</h1>
+
+	<%= render 'form' %>
+
+	<%= link_to 'Show', @food %> |
+	<%= link_to 'Back', foods_path %>
+</div>
