--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New food</h1>
+<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
+<%= render 'layouts/top_navigation' %>
 
-<%= link_to 'Back', foods_path %>
+<div class="container">
+	<h1>New food</h1>
+
+	<%= render 'form' %>
+
+	<%= link_to 'Back', foods_path %>
+</div>
