--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -38,10 +38,10 @@
 		    <%= s.label :note, 'Why do you recommend this food?' %><br />
 		    <%= s.text_area :note, :rows => 3 %>
 		</div>
-		<!-- <div class="field">
+		<div class="field">
 			<%= s.label :rating %><br />
-		    <%= s.select :rating, { "*" => "1", "**" => "2", "***" => "3", "****" => "4", "*****" => "5"} %>
-		</div> -->
+		    <%= s.select :rating, { "Select" => nil, "*" => "1", "**" => "2", "***" => "3", "****" => "4", "*****" => "5"} %>
+		</div>
 	<% end %>
 	
     <%= f.submit %>
