--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,29 +1,39 @@
-<h1>Listing posts</h1>
+<p id="notice"><%= notice %></p>
 
-<table>
-  <tr>
-    <th>Note</th>
-    <th>Rating</th>
-    <th>Picture</th>
-    <th>Food</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<%= render 'layouts/top_navigation' %>
 
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.note %></td>
-    <td><%= post.rating %></td>
-    <td><%= post.picture %></td>
-    <td><%= link_to post.food.name, "#" %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+<div class="container">
+	<h1>Listing posts</h1>
 
-<br />
+	<table>
+	  <tr>
+	    <th>Note</th>
+	    <th>Rating</th>
+	    <th>Picture</th>
+	    <th>Food</th>
+	    <th></th>
+	    <th></th>
+	    <th></th>
+	  </tr>
 
-<%= link_to 'New Post', new_post_path %>
+	<% @posts.each do |post| %>
+	  <tr>
+	    <td><%= post.note %></td>
+	    <td><%= post.rating %></td>
+	    <td><%= post.picture %></td>
+	    <td>
+			<% if post.food %>
+				<%= link_to post.food.name, food_url(post.food_id) %>
+			<% end %>
+		</td>
+	    <td><%= link_to 'Show', post %></td>
+	    <td><%= link_to 'Edit', edit_post_path(post) %></td>
+	    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	  </tr>
+	<% end %>
+	</table>
+
+	<br />
+
+	<%= link_to 'New Post', new_post_path %>
+</div>
