TG:code clean up

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -11,7 +11,7 @@ body {
 .container {
 	width: 960px;
 	margin: 5px auto;
-	padding: 5px 20px;
+	padding: 5px 20px 30px 20px;
 	background: #fff;
 	box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
 	border-radius: 10px;	
@@ -51,7 +51,9 @@ body {
 	list-style-type: none;
 	margin: 0 0 10px -30px;
 	padding: 5px;
-	border: 1px solid #808;
+	border-radius: 5px;
+	border: 0px solid #808;
+	box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.3);
 }
 
 #notice {
@@ -60,8 +62,9 @@ body {
 }
 
 .picture {
-	max-width: 200px;
-	max-height: 200px;
+	position:relative;
+	float:right;
+	margin:  0 20px; 
 }
 
 
