--- a/app/views/layouts/_top_navigation.erb
+++ b/app/views/layouts/_top_navigation.erb
@@ -3,5 +3,13 @@
 		<li><%= link_to "Posts feed", posts_url %></li>
 		<li><%= link_to "Search foods", foods_url %></li>
 		<li><%= link_to "Post food", new_food_url %></li>
+		<% if session[:user_id] %>
+			<li>Hello <%= link_to "#{User.find_by_id(session[:user_id]).name}", user_url(session[:user_id]) %></li>
+			<li><%= link_to "Sign Out", sign_out_url %></li>
+		<% else  %>
+			<li><%= link_to "Sign In", sign_in_url %> or <%= link_to "Sign Up", new_user_url %></li>
+		<% end  %>
 	</ul>
 </div>
+
+<!-- #{User.find_by_id(:user_id).name} -->
