--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing user</h1>
+<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+
+<div class="container">
+	
+	<h1>Editing user</h1>
+
+	<%= render 'form' %>
+
+	<%= link_to 'Show', @user %> |
+	<%= link_to 'Back', users_path %>
+	
+</div>
+
+
+
