--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New user</h1>
+<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+
+<div class="container">
+	
+	<h1>New user</h1>
+
+	<%= render 'form' %>
+
+	<%= link_to 'Back', users_path %>
+	
+</div>
+
+
+
+
+
+
+
