--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -15,10 +15,14 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :price %><br />
-    <%= f.text_field :price %>
-  </div>
+
+	<%= f.fields_for :prices do |p| %>
+		<div class="field">
+		    <%= p.label :price, 'Enter price of the food' %><br />
+		    <%= p.number_field :price %>
+		</div>
+	<% end %>
+	
   <div class="field">
     <%= f.label :picture %><br />
     <%= f.file_field :picture %>
