TG: change column names in Users table

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,12 +6,12 @@
 	
 	<p>
 	  <b>Name:</b>
-	  <%= @user.name %>
+	  <%= @user.fname %>
 	</p>
 
 	<p>
 	  <b>Surname:</b>
-	  <%= @user.surname %>
+	  <%= @user.lname %>
 	</p>
 
 	<p>
