--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :fname %><br />
+    <%= f.text_field :fname %>
   </div>
   <div class="field">
-    <%= f.label :surname %><br />
-    <%= f.text_field :surname %>
+    <%= f.label :lname %><br />
+    <%= f.text_field :lname %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
