--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,8 +18,8 @@
 
 	<% @users.each do |user| %>
 	  <tr>
-	    <td><%= user.name %></td>
-	    <td><%= user.surname %></td>
+	    <td><%= user.fname %></td>
+	    <td><%= user.lname %></td>
 	    <td><%= user.email %></td>
 	    <td><%= link_to 'Show', user %></td>
 	    <td><%= link_to 'Edit', edit_user_path(user) %></td>
