--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
+	
+		<%= link_to 'Add Food', new_food_path %>
+	
 	<h1>Listing foods</h1>
 
 	<table>
@@ -28,6 +31,5 @@
 	</table>
 
 	<br />
-
-	<%= link_to 'New Food', new_food_path %>
+	
 </div>
