--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -24,21 +24,10 @@
 	<%= link_to 'Edit', edit_food_path(@food) %>
 
 	<br />
-	<h3>Food's yoummies</h3>
-	<div class="post">
-		<ul>
-			<% @posts.each do |post| %>
-			    <li>
-					<%= post.note %><br />
-					Rating: <%= post.rating %>
-				</li>
-			    <!-- 	<%= link_to 'Show', post %>
-			    		<%= link_to 'Edit', edit_post_path(post) %></td>
-			    		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %> -->
-			  </tr>
-			<% end %>
-	<div>
-		
+	<h3>Posts</h3>
+	
+	<%= render 'posts/posts' %>
+	
 	<%= render 'posts/form' %>
 
 </div>
