--- a/app/views/layouts/_top_navigation.erb
+++ b/app/views/layouts/_top_navigation.erb
@@ -1,8 +1,8 @@
 <div class="top_nav_container">
 	<ul>
-		<li><%= link_to "Posts feed", posts_url %></li>
-		<li><%= link_to "Search foods", foods_url %></li>
-		<li><%= link_to "Post food", new_food_url %></li>
+		<li><%= link_to "Posts", posts_url %></li>
+		<li><%= link_to "Foods", foods_url %></li>
+		<li><%= link_to "Shops", shops_url %></li>
 		<% if session[:user_id] %>
 			<li>Hello <%= link_to "#{User.find_by_id(session[:user_id]).name}", user_url(session[:user_id]) %></li>
 			<li><%= link_to "Sign Out", sign_out_url %></li>
