--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for [@postable, @post] do |f| %>
 	<% if @post.errors.any? %>
 	  <div id="error_explanation">
 	    <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -20,7 +20,7 @@
 	    <%= f.select :rating, { "Select" => nil, "*" => "1", "**" => "2", "***" => "3", "****" => "4", "*****" => "5"} %>
 	</div>
 	<div class="field">
-	  <%= f.hidden_field :food_id, :value => @food.id %>
+	  <%= f.hidden_field :postable_id, :value => @postable.id %>
 	</div>
 	<div class="actions">
 	  <%= f.submit %>
